@@ -1,3 +1,12 @@
+2010-05-20  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        ThreadedMessageQueue should use with_statement for exception safety
+        https://bugs.webkit.org/show_bug.cgi?id=39233
+
+        * Scripts/webkitpy/common/thread/threadedmessagequeue.py:
+
 2010-05-20  Diego Gonzalez  <diegohcg@webkit.org>
 
         Reviewed by Kenneth Rohde Christiansen.
